.gitignore is now working

--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -35,7 +35,7 @@
         <img src="img/menu/category/social.png">
         <a>Social</a>
     </button>
-    <button class="button button-clear category">
+    <button class="button button-clear category" menu-close ui-sref="menu.coolway">
         <img src="img/menu/category/coolway.png">
         <a>Coolway</a>
     </button>
