--- a/www/templates/menu/main.html
+++ b/www/templates/menu/main.html
@@ -21,11 +21,11 @@
             </ion-nav-buttons>
         </ion-nav-bar>
         <ion-nav-view name="content"></ion-nav-view>
-        <ion-footer-bar align-title="left" class="bar-dark">
+        <ion-footer-bar align-title="left" class="bar-dark" ng-controller="PlayerController">
             <!--<div class="buttons">-->
             <!--<button class="button"></button>-->
             <!--</div>-->
-            <h1 class="title">Spotify preview track</h1>
+            <button class="title button button-clear" ng-click="openPlayer()">Spotify preview track</button>
             <!--<i style="float: right" class="ion-play"></i>-->
         </ion-footer-bar>
     </ion-side-menu-content>
