Adding info, organizer & streaming views

--- a/www/templates/artist/discover.html
+++ b/www/templates/artist/discover.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content has-bouncing="false">
+    <ion-content has-bouncing="true">
         <div class="row">
             <div class="col">
                 <h2 class="text-center">Discover</h2>
