--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -23,11 +23,11 @@
         <img src="img/menu/category/ticket.png">
         <a>Entradas</a>
     </button>
-    <button class="button button-clear category">
+    <button class="button button-clear category" menu-close ui-sref="menu.streaming">
         <img src="img/menu/category/streaming.png">
         <a>Streaming</a>
     </button>
-    <button class="button button-clear category">
+    <button class="button button-clear category" menu-close ui-sref="menu.info">
         <img src="img/menu/category/info.png">
         <a>Info</a>
     </button>
