--- a/www/templates/menu/main.html
+++ b/www/templates/menu/main.html
@@ -31,12 +31,12 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
-        <div ng-include="'templates/sidebar/left.html'" class="sidebar-left"></div>
+        <div ng-include="'templates/menu/left.html'" class="sidebar-left"></div>
     </ion-side-menu>
 
 
     <ion-side-menu side="right">
-        <div ng-include="'templates/sidebar/right.html'" class="sidebar-right"></div>
+        <div ng-include="'templates/menu/right.html'" class="sidebar-right"></div>
     </ion-side-menu>
 
 </ion-side-menus>
