--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -1,5 +1,8 @@
 <ion-view>
-    <div class="header-left-menu">
+    <div class="powered-by">
+        <img src="img/menu/coolway_powered.png">
+    </div>
+    <div class="header-left-menu" menu-close ui-sref="menu.artist">
         <img src="img/menu/festival_arts.png">
     </div>
 
@@ -11,7 +14,7 @@
         <img src="img/menu/category/poster.png">
         <a>Cartel</a>
     </button>
-    <button class="button button-clear category">
+    <button class="button button-clear category" menu-close ui-sref="menu.schedule">
         <img src="img/menu/category/schedule.png">
         <a>Horarios</a>
     </button>
@@ -41,8 +44,7 @@
     </button>
 
     <div class="footer-left-menu">
-        <span>By</span>
-        <img src="img/menu/coolway.png">
+        <img src="img/menu/the_night_time.png">
     </div>
 
 </ion-view>
