--- a/www/templates/user/login.html
+++ b/www/templates/user/login.html
@@ -34,7 +34,7 @@
         <div class="list">
             <div class="row">
                 <div class="col">
-                    <a ui-sref="menu.discover" class="recordar">Más tarde</a>
+                    <a ui-sref="menu.artist" class="recordar">Más tarde</a>
                 </div>
             </div>
         </div>
