--- a/www/templates/coolway/main.html
+++ b/www/templates/coolway/main.html
@@ -1,22 +1,35 @@
 <ion-view>
-    <ion-content has-bouncing="true">
-        <div class="row">
-            <div class="col">
-                <h2 class="text-center">Coolway</h2>
+    <ion-content has-bouncing="true" class="coolway" scroll="false">
+        <div class="header">
+            <div class="row">
+                <div class="col col-100 logo">
+                    <img src="img/coolway/coolway.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col left">
+                    <img src="img/coolway/left.png">
+                </div>
+                <div class="col center">
+                    <img src="img/coolway/night_time.png">
+                </div>
+                <div class="col right">
+                    <img src="img/coolway/right.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-100 social-network">
+                    <a class="social">
+                        <img src="img/coolway/social-network/facebook.png">
+                    </a>
+                    <a class="social center">
+                        <img src="img/coolway/social-network/twitter.png">
+                    </a>
+                    <a class="social">
+                        <img src="img/coolway/social-network/instagram.png">
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col col-100">
-                <img src="img/coolway.png" style="width: 380px">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum
-                </p>
-
-            </div>
-        <div>
     </ion-content>
 </ion-view>
