--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -2,11 +2,11 @@
     <div class="powered-by">
         <img src="img/menu/coolway_powered.png">
     </div>
-    <div class="header-left-menu" menu-close ui-sref="menu.artist">
+    <div class="header-left-menu" menu-close ui-sref="menu.artist-discover">
         <img src="img/menu/festival_arts.png">
     </div>
 
-    <button class="button button-clear category">
+    <button class="button button-clear category" menu-close ui-sref="menu.artist-list">
         <img src="img/menu/category/artist.png">
         <a>Artistas</a>
     </button>
