--- a/www/templates/user/login.html
+++ b/www/templates/user/login.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content has-bouncing="false">
+    <ion-content has-bouncing="false" overflow-scroll="false">
         <div class="row" data-ng-show="!view.loginEmail">
             <div class="col">
                 <button ng-click="loginFacebook()" class="button button-full facebook icon">
@@ -34,7 +34,7 @@
         <div class="list">
             <div class="row">
                 <div class="col">
-                    <a ui-sref="menu.artist" class="recordar">Más tarde</a>
+                    <a ui-sref="menu.artist-discover" class="recordar">Más tarde</a>
                 </div>
             </div>
         </div>
