--- a/www/templates/user/register.html
+++ b/www/templates/user/register.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content has-bouncing="false">
+    <ion-content has-bouncing="false" overflow-scroll="false">
         <div class="list">
             <label class="item item-input">
                 <span class="input-label">E-Mail</span>
