--- a/www/templates/schedule/main.html
+++ b/www/templates/schedule/main.html
@@ -2,11 +2,11 @@
     <ion-content has-bouncing="true" scroll="false" class="bg-dark schedule">
         <div class="row subtitle" scroll="false">
             <div class="col col-100">
-                <div class="landscape">
-                    <button class="button button-clear">
-                        <img src="img/schedule/landscape.png">
-                    </button>
-                </div>
+                <!--<div class="landscape">-->
+                    <!--<button class="button button-clear">-->
+                        <!--<img src="img/schedule/landscape.png">-->
+                    <!--</button>-->
+                <!--</div>-->
                 <div class="days">
                     <button class="button button-clear">
                         <img src="img/schedule/pro.png">
@@ -40,7 +40,7 @@
             <ion-list class="list">
                 <ion-item>
                     <div class="left">
-                        <img src="img/hurts.jpg" class="artist-cover">
+                        <img ng-src="http://placehold.it/80x80" class="artist-cover">
                     </div>
                     <div class="center">
                         <p class="artist-name">Hurts</p>
